# analise-crises

./: .gitignore  README.md  pyproject.toml
deprecated/crisis/: README.md
deprecated/crisis/src/: agents.py  walker.py
deprecated/mesa-testing/: money_model.py
deprecated/mixed/: agents.py  server.py  walk.py
src/: agents.py  analysis.ipynb  cell.py  model.py  portrayal.py  server.py
